[package]
name = "rust_users"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "uuid"] }
dotenvy = "0.15"