[package]
name = "rust_users"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
hyper = { version = "1.7.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "uuid"] }
dotenvy = "0.15"
anyhow = "1.0.100"
